RESOLVED FIXED71713
REGRESSION(r99436): Broke Snow Leopard debug build
https://bugs.webkit.org/show_bug.cgi?id=71713
Summary REGRESSION(r99436): Broke Snow Leopard debug build
Ryosuke Niwa
Reported 2011-11-07 11:52:29 PST
http://trac.webkit.org/changeset/99436 broke snow leopard build because ASSERT(c >= 0); ASSERT(c <= 0xFF); are always true.
Attachments
fixes the build (1.88 KB, patch)
2011-11-07 12:11 PST, Ryosuke Niwa
darin: review+
Ryosuke Niwa
Comment 1 2011-11-07 12:11:42 PST
Created attachment 113906 [details] fixes the build
Ryosuke Niwa
Comment 2 2011-11-07 14:10:17 PST
Note You need to log in before you can comment on or make changes to this bug.