REGRESSION(r99436): Broke Snow Leopard debug build https://bugs.webkit.org/show_bug.cgi?id=71713

Reviewed by Darin Adler.

Put the assertion in a template and use template specialization
to avoid warning when instantiated with UChar or LChar.

In the long term, we should have traits for unsigned integral types
and use that to specialize template instead of specializing it for UChar and LChar.

* parser/Lexer.cpp:
(JSC::assertCharIsIn8BitRange):
(JSC::::append8):


Canonical link: https://commits.webkit.org/88051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99474 268f45cc-cd09-0410-ab3c-d52691b4dbfc